[gd_scene load_steps=8 format=3 uid="uid://dhf0slbx1ay6e"]

[ext_resource type="Script" path="res://scenes/settings/settings.gd" id="1_6peuh"]
[ext_resource type="Texture2D" uid="uid://n4uahpw1bani" path="res://assets/menu/settings/close_button.png" id="2_6cvpe"]
[ext_resource type="Texture2D" uid="uid://bj5oeic6v5dc4" path="res://assets/menu/settings/settings-bg.png" id="2_l18ii"]
[ext_resource type="FontFile" uid="uid://882jmhbdubm5" path="res://assets/font/Fredoka/static/Fredoka_Expanded-Bold.ttf" id="3_dbqs0"]
[ext_resource type="Texture2D" uid="uid://bdsklny5x304f" path="res://assets/menu/settings/mute_button-unpressed.png" id="3_mbk1v"]
[ext_resource type="Texture2D" uid="uid://hqc6j47hl0ja" path="res://assets/menu/settings/close_button-pressed.png" id="3_omqaq"]
[ext_resource type="FontFile" uid="uid://bsa71g1huleqg" path="res://assets/font/Fredoka/static/Fredoka-Medium.ttf" id="6_k3lu2"]

[node name="Settings" type="Node2D"]
script = ExtResource("1_6peuh")

[node name="BackButton" type="TextureButton" parent="."]
z_index = 2
offset_left = 225.0
offset_top = 146.0
offset_right = 403.0
offset_bottom = 332.0
scale = Vector2(0.6, 0.604)
texture_normal = ExtResource("2_6cvpe")
texture_pressed = ExtResource("3_omqaq")

[node name="SettingsLabel" type="Label" parent="."]
z_index = 2
offset_left = 478.0
offset_top = 22.0
offset_right = 795.0
offset_bottom = 110.0
theme_override_fonts/font = ExtResource("3_dbqs0")
theme_override_font_sizes/font_size = 64
text = "Settings
"

[node name="BG" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(637, 345)
scale = Vector2(0.8, 0.74)
texture = ExtResource("2_l18ii")

[node name="MuteButton" type="TextureButton" parent="."]
z_index = 1
offset_left = 334.0
offset_top = 482.0
offset_right = 858.0
offset_bottom = 667.0
scale = Vector2(0.400642, 0.4)
texture_normal = ExtResource("3_mbk1v")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
z_index = 2
offset_left = 322.0
offset_top = 277.0
offset_right = 942.0
offset_bottom = 479.0
scale = Vector2(1, 0.914)

[node name="Music_Volume" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_k3lu2")
theme_override_font_sizes/font_size = 64
text = "Music Volume"

[node name="Music_Volume-Slider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.1
tick_count = 5
ticks_on_borders = true

[node name="SFX_Volume" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_k3lu2")
theme_override_font_sizes/font_size = 64
text = "Sound Effects Volume"

[node name="SFX_Volume-Slider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.1
tick_count = 5
ticks_on_borders = true

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="MuteButton" to="." method="_on_mute_button_pressed"]
[connection signal="value_changed" from="VBoxContainer/Music_Volume-Slider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/SFX_Volume-Slider" to="." method="_on_sfx_volume_slider_value_changed"]
